# NephilimGameEngine

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
include/tinyobj/: tiny_obj_loader.h
src/: glad.c  main.cpp
src/Engine/: AABB.cpp  AABB.h  AssetDB.h  Camera.cpp  Camera.h  Config.h  Core.cpp  Core.h  Engine.cpp  Engine.h  Event.h  Input.h  IntersectData.cpp  IntersectData.h  Random.h  Ray.h  Timer.cpp  Timer.h  Transform.cpp  Transform.h  Window.cpp  Window.h
src/Engine/Editor/: Editor.h
src/Engine/Node/: CameraNode.h  Node.cpp  Node.h  Node3D.h  StaticMeshNode.h
src/Graphics/: Bindable.h  Framebuffer.cpp  Framebuffer.h  Graphics.h  HDRTexture.cpp  HDRTexture.h  Material.h  Screen.h  Shader.cpp  Shader.h  ShaderStage.cpp  ShaderStage.h  StaticMesh.cpp  StaticMesh.h  Texture.h  Texture2D.cpp  Texture2D.h  UniformBuffer.h
src/Graphics/RenderGraph/: Pass.cpp  Pass.h  RenderGraph.h  Sink.h  Source.h
src/ImGUI/: imgui_stdlib.h
